fix vertices list in left menu style is broken in chrome

--- a/src/main/webapp/module/mind_map/vertices_list/desktop/vertices_list.css
+++ b/src/main/webapp/module/mind_map/vertices_list/desktop/vertices_list.css
@@ -23,6 +23,7 @@
     padding-top:0px;
     margin-top:3px;
     margin-bottom:0px;
+    white-space: nowrap;
 }
 
 #vertices-list-sort-options li {
